--- a/Pages/css/General.css
+++ b/Pages/css/General.css
@@ -24,4 +24,19 @@ section {
 	margin-right:auto;
 }
 
+section p {
+	width:80%;
+	margin-right:auto;
+	margin-left:auto;
+}
+
+/* For smaller screens: */
+@media only screen and (max-width: 680px) {
+	section p {	width:90%;	}	
+}
+
+@media only screen and (max-width: 400px) {
+	section p {	width:98%;	}	
+}
+
 /* */
