--- a/Pages/css/General.css
+++ b/Pages/css/General.css
@@ -49,16 +49,16 @@ nav#top a {
 	font-size:2em;
 }
 
-a:link {
+nav a:link {
 	color:#008200;
 	text-decoration:none;
 }
 
-a:hover {
+nav a:hover {
 	text-decoration:underline;
 }
 
-a:visited {
+nav a:visited {
 	color:#008200;
 }
 
