Added ErrorNoName page and ErrorNameInUse page!

--- a/Pages/css/General.css
+++ b/Pages/css/General.css
@@ -64,6 +64,12 @@ nav a:visited {
 
 h1 { font-size:1.8em; }
 
+.ErrorMessage {
+	color:red;
+	font-weight:bold;
+	font-size:1.1em;
+}
+
 /*
 Exciting. Satisfying. Period.
 .
